2007-03-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/strsctp.sh: ubuntu looks for lsb info in init scripts

2007-03-07  Brian Bidulock  <bidulock@openss7.org>

	* src/test/test-etsi_t.c: print primitives at default verbosity
	* src/test/test-sctp_n.c: print primitives at default verbosity
	* src/test/test-sctp_n2.c: print primitives at default verbosity
	* src/test/test-sctp_t.c: print primitives at default verbosity
	* Makefile.am (modutil_DATA): should not be distributed
	* tests/atlocal.in: tool substitutions changed

2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: get rid of extraneous warnings
	* acinclude.m4: correct version numbers
	* strsctp.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strsctp.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/configure.texi: updates and corrections
	* doc/manual/descrip.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/rpm.texi: updates and corrections
	* doc/manual/strsctp.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-12  Brian Bidulock  <bidulock@openss7.org>
